--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,24 @@
 {
-  "name": "newsletter",
+  "name": "page1",
   "version": "0.0.0",
   "dependencies": {
-    "angular": ">=1.2.*",
+    "angular": "~1.4.*",
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "jquery": "~1.11.0",
     "bootstrap-sass-official": "~3.1.1",
     "bootstrap": "~3.1.1",
-    "angular-resource": ">=1.2.*",
+    "angular-resource": ">=1.4.*",
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
-    "angular-route": ">=1.2.*",
+    "angular-route": "~1.3.15",
     "font-awesome": ">=4.1.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "x2js": "~1.1.7",
+    "angular-x2js": "~0.2.0"
   },
   "devDependencies": {
-    "angular-mocks": ">=1.2.*",
+    "angular-mocks": "~1.3.15",
     "angular-scenario": ">=1.2.*"
   }
 }
